--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,50 @@ body {
   margin: 0 auto;
 }
 
-/* 追記 */
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
 .header {
   background-color: #F5B4B3;
   height: 50px;
   font-size: 1.5rem;
 }
 
+/* 追記 */
+ul.top_menu {
+  float: right;
+}
+
+.top_menu li {
+  float: left;
+  width: auto;
+}
+
+.top_menu li a {
+  color: #fff;
+  text-decoration: none;
+  display: block;
+  padding: 15px;
+}
+
+.top_menu li a:hover {
+  text-decoration: underline;
+}
+
 .logo_image {
-    width: 110px;
-    margin: 0;
+  width: 110px;
+  float: left;
+  margin: 0;
+}
+
+.clearfix:after {
+  content: "";
+  display: block;
+  clear: both;
 }
